--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body {
 }
 
 .App {
-  height: 100vh;
+  height: 1960px;
   width: 100%;
   background-color: #F9F9F9;
 }
@@ -36,7 +36,7 @@ body {
 /* Brand */
 
 .menu-vertical-logo{
-  width: 75%;
+  width: 65%;
   margin: 1em;
 }
 
@@ -114,23 +114,24 @@ body {
 /*dashboard*/
 .dashboard{
 
-  float: left;
+  
   width:84%;
   height: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   
 }
 
 .dashboard-navbar{
 
-  margin: 0 auto;
+  margin-top: 1.5em;
   width: 94%;
   height: 62px;
   display: flex;
   background-color: #FFF;
   justify-content: space-between;
-  border-radius: 4px;
+  border-radius: 8px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 
 }
@@ -173,4 +174,422 @@ body {
   margin: 0;
   font-size: 11px;
   font-weight: 300;
+}
+
+/* Bread Crumbs */
+
+.bread-crumbs{
+
+  width: 94%;
+  height: 40px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1.5em;
+
+}
+
+.bread-crumbs-title{
+  display: flex;
+ 
+}
+
+.bread-crumbs-title-div{
+  display: flex;
+  align-items: center;
+}
+
+.bread-crumbs-title-div h3{
+  font-family: Montserrat;
+  font-weight: 300;
+  margin: 0;
+  font-size: 24px;
+}
+
+.bread-crumbs-icons{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 100px;
+  border-left: 1px solid #979797;
+  padding-left: .5em;
+  margin-left: 1em;
+}
+
+
+
+
+
+.bread-crumbs-icons h5{
+  font-size: 14px;
+  font-weight: 400;
+  font-family: Montserrat;
+}
+
+.bread-crumbs-settings{
+  width: 40px;
+  height: 40px;
+  background-color: #717171;
+  border-radius: 50%;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Subscribers Card */
+
+.sub-section-shop{
+  margin-top: 1.5em;
+  display: flex;
+  width: 94%;
+  height: 80%;
+  
+}
+
+.subscribers-card-section{
+  width: 375px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+
+  
+  
+}
+
+.subscribers-card-title{
+
+  font-size: 18px;
+  font-weight: 400;
+  font-family: Montserrat;
+}
+
+.subscribers-card{
+  margin-top: 2em;
+    width: 100%;
+    height: 1452px;
+    background-color: #FFF;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+/* Multi Range */
+
+.subscribers-card-prices{
+  width: 90%;
+  margin: 0 auto;
+  padding-top: 1em;
+  padding-bottom: 1.5em;
+  border-bottom: 1px solid #979797;
+}
+.subscribers-card-prices-title{
+  font-size: 18px;
+  font-weight: 600;
+  font-family: Montserrat;
+  color: #2C2C2C;
+}
+
+.form-check{
+  margin: .5em 0;
+  height: 25px;
+}
+
+.filter-categories-star{
+
+  margin: 0 -1.2em !important;
+}
+
+
+.filter-prices{
+  font-size: 16px;
+  font-weight: 300;
+  font-family: Montserrat;
+}
+
+input[type="radio" i]:checked {
+  background-color: #717171 !important;
+}
+
+.slider-valores-div{
+  
+  padding-bottom: 1.5em;
+  border-bottom: 1px solid #979797;
+}
+
+/*Categories*/
+
+.filter-categories-label{
+  
+  font-size: 16px;
+  font-weight: 300;
+  font-family: Montserrat;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.filter-categories{
+  display: flex;
+  align-items: center;
+}
+
+.filter-categories p {
+  padding-left: .5em; 
+}
+
+.form-check-label{
+  height: 25px;
+}
+
+.subscribers-card-avaliation{
+  width: 90%;
+  margin: 0 auto;
+  padding-top: 1em;
+  padding-bottom: 1.5em;
+}
+
+.sub-section-clean{
+  margin: 0 auto;
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.sub-section-clean-filter{
+
+  width: 279px;
+  height: 56px;
+  color: #FFF;
+  background-color: #696969;
+  margin-top: 2em;
+  border-radius: 8px;
+  border-style: none;
+  font-style: 18px;
+  font-weight: 400;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+/*section-result*/
+
+.section-result{
+
+  margin-left: 3em;
+  width: 1170px;
+  height: 100%;
+
+}
+
+.section-result-options{
+  display: flex;
+  justify-content: space-between;
+}
+
+.section-result-options h3{
+  font-size: 18px;
+  font-weight: 500;
+  font-family: Montserrat;
+}
+
+.result-buttons{
+
+  display: flex;
+}
+
+.section-result-button{
+
+  width: 135px;
+  height: 40px;
+  background-color: #FFFFFF;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border: none;
+  border-radius: 8px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 .8em;
+}
+
+.section-result-button p{
+  font-size: 14px;
+  font-weight: 400;
+  font-family: Montserrat;
+  margin: 0;
+  font-size: 14px;
+}
+
+.section-result-button-mini{
+  width: 40px;
+  height: 40px;
+  background-color: #FFFFFF;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border: none;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 1em;
+}
+
+.submit-search{
+
+  position: relative;
+  width: 100%;
+
+}
+
+.submit-search input{
+
+  width: 100%;
+
+}
+
+.submit-lente {
+  
+  position:absolute;
+  top: 33px; right:10px;
+  z-index:10;
+  border:none;
+  background:transparent;
+  outline:none;
+}
+
+
+.input-result{
+  width: 100%;
+  height: 62px;
+  margin-top: .9em;
+  padding-left: 1em;
+  background-color: #FFFFFF;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border: none;
+  border-radius: 8px;
+  font-size: 22px;
+}
+
+/*product-section*/
+
+.product-section{
+  width: 100%;
+  height: 250px;
+  background-color: #FFFFFF;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+  margin-top: 1.7em;
+  display: flex;
+  align-items: center;
+  
+}
+
+.product-section img{
+  width: 213px;
+  height: 210px;
+  border-radius: 8px; 
+  margin: 1em;
+}
+
+.product-section-description-title{
+
+  font-family: Montserrat;
+  font-size: 18px ;
+  font-weight: 400;
+}
+
+.product-section-description-autor{
+  color: #7E7E7E;
+}
+
+.product-section-description-text{
+  margin-top: 1em;
+  font-size: 12px;
+}
+
+.product-section-description p{
+  font-family: Montserrat;
+  width: 90%;
+  text-align: left;
+
+}
+
+.product-section-buttons{
+  height: 100%;
+  padding: 1em 1em 1em 2em;
+
+  border-left: 1px solid #979797;
+  
+}
+
+.product-section-stars{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  
+}
+
+.product-section-stars div{
+  width: 60px;
+  height: 30px;
+  background-color: #787878;
+  border-radius: 3px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: #fff;
+
+  
+}
+
+.product-section-stars div h3{
+  margin: 0;
+  font-size: 14px;
+  font-family: Montserrat;
+}
+
+.product-section-value{
+  font-size: 18px;
+  font-weight: 400;
+  font-family: Montserrat;
+  text-align: center;
+  margin: 1em 0;
+}
+
+.product-section-button-heart{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 180px;
+  height: 45px;
+  margin-top: 2em;
+  font-weight: 600;
+  background-color: #EDEDED;
+  color: #2C2C2C;
+  border-radius: 4px;
+  border-style: none;
+}
+
+.product-section-button-heart h3{
+  margin: 0;
+  font-size: 14px !important;
+  padding-left: .5em;
+}
+
+.product-section-button-shopping{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 180px;
+  height: 45px;
+  font-weight: 600;
+  background-color: #686868;
+  color: #FFF;
+  border-radius: 4px;
+  border-style: none;
+  margin-top: 1em;
+}
+
+.product-section-button-shopping h3{
+  margin: 0;
+  font-size: 14px !important;
+  padding-left: .5em;
 }
